# PyGIRF

./: .gitignore  README.md  demo2.py  demo_girf.py  demo_pygirf.py  pyproject.toml  zensical.toml
.github/workflows/: deploy-docs.yml  publish-pypi.yml
docs/: guide.md  index.md
src/girf/: __init__.py  core.py  utils.py
