[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygirf"
version = "0.2.0"
description = "PyGIRF — gradient impulse response function tools for MRI systems"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Leo Kinyera", email = "leokinyera81@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
docs = [
  "zensical>=0.0.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "zensical>=0.0.31",
]
